--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@darkie8/excel-order-dictionary-alike",
-  "version": "1.0.2",
+  "name": "bengali-excel-order-dictionary",
+  "version": "1.0.12",
   "description": "order a certain colomn of an excel file with dictionary like sorting and republish it. Available for Bengali and English",
   "main": "index.js",
   "scripts": {
-    "build": "tsc index.ts && gulp minify-js"
+    "build": "tsc && gulp minify-js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,14 @@
   },
   "dependencies": {
     "@types/node": "^13.11.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.2",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.9",
     "uglify-es": "^3.3.9"
   },
   "readme": "./README.md",
