--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
+  "include": ["index.ts"],
     "compilerOptions": {
       "target": "es5",
       "sourceMap": true,
-      "downlevelIteration": true
+      "downlevelIteration": true,
+      "declaration": true,
+      "allowJs": true
     }
   }
